--- a/src/main/resources/static/css/coffee.css
+++ b/src/main/resources/static/css/coffee.css
@@ -5,7 +5,7 @@
     background-color: lightGrey;
 }
 
-#display {
+.message {
     position: absolute;
     top: 20px;
     left: 20px;
@@ -13,21 +13,20 @@
     width: 500px;
     background-color: black;
     border-radius: 15px;
+    text-align: center;
 }
 
-#message {
+.message span {
     color: white;
     font-size: 24px;
     font-family: "Brush Script MT", sans-serif;
-    position: absolute;
-    left: 0;
-    top: 0;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 150px;
+    display: block;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
-#tray {
+.tray {
     position: absolute;
     bottom: 20px;
     left: 20px;
@@ -36,7 +35,7 @@
     background-color: grey;
 }
 
-#power {
+.power {
     position: absolute;
     top: 20px;
     right: 20px;
@@ -45,37 +44,50 @@
     background-color: red;
     background-image: url(/images/power64x64.png);
     background-repeat: no-repeat;
+    background-size: 64px 64px;
     background-position: 50% 50%;
     -moz-border-radius: 50px;
     -webkit-border-radius: 50px;
     border-radius: 50px;
 }
 
-#brew {
+.on {
+    background-color: green;
+}
+
+.brew {
     position: absolute;
     top: 160px;
     right: 20px;
     height: 100px;
     width: 100px;
-    background-color: blue;
+    background-color: orange;
     -moz-border-radius: 50px;
     -webkit-border-radius: 50px;
+    background-image: url(/images/icons8-Cafe-64.png);
+    background-repeat: no-repeat;
+    background-size: 64px 64px;
+    background-position: 50% 50%;
     border-radius: 50px;
 }
 
-#clean {
+.clean {
     position: absolute;
     top: 300px;
     right: 20px;
     height: 100px;
     width: 100px;
-    background-color: blue;
+    background-color: orange;
     -moz-border-radius: 50px;
     -webkit-border-radius: 50px;
+    background-image: url(/images/clean.png);
+    background-size: 64px 64px;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
     border-radius: 50px;
 }
 
-#pot {
+.pot {
     position: absolute;
     bottom: 20px;
     left: 190px;
@@ -86,7 +98,7 @@
     width: 100px;
 }
 
-#potFilled {
+.potFilled {
     display: none;
     position: absolute;
     bottom: 20px;
