--- a/src/main/resources/static/css/coffee.css
+++ b/src/main/resources/static/css/coffee.css
@@ -16,16 +16,6 @@
     text-align: center;
 }
 
-.message span {
-    color: white;
-    font-size: 24px;
-    font-family: "Brush Script MT", sans-serif;
-    display: block;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
 .tray {
     position: absolute;
     bottom: 20px;
@@ -111,3 +101,16 @@
     width: 100px;
 }
 
+.admin {
+    position: relative;
+}
+
+span {
+    color: white;
+    font-size: 24px;
+    font-family: "Calibri Light", sans-serif;
+    display: block;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
